--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,11 +1,10 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "file",
-        "source": "~/.config/fastfetch/tux.txt",
-        "color": {
-            "1": "cyan"
-        }
+        "type": "auto",
+        "source": "~/.config/fastfetch/logos/tux.png",
+        "width": 20,
+        "height": 10
     },
     "display": {
         "separator": "  ",
