feat: add Super+Tab keybind for togglesplit

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -130,6 +130,7 @@ bind = Super+Shift, up, movewindow, u
 bind = Super+Shift, down, movewindow, d
 binde = Super, Minus, splitratio, -0.1
 binde = Super, Equal, splitratio, 0.1
+bind = Super, Tab, togglesplit  # Toggle split direction (horizontal/vertical)
 bindm = Super, mouse:272, movewindow
 bindm = $kbMoveWindow, movewindow
 bindm = Super, mouse:273, resizewindow
