--- a/caelestia/hypr-user.conf
+++ b/caelestia/hypr-user.conf
@@ -1,3 +1,21 @@
 
+# Monitors
+# Laptop - left of ultrawide, vertically centered
+monitor = eDP-1, 1920x1080@165, 0x180, 1
+# Ultrawide (primary) - right of laptop
+monitor = HDMI-A-1, 3440x1440@175, 1920x0, 1
+
+# Workspaces - ultrawide gets 1-5 (primary), laptop gets 6-10
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:HDMI-A-1
+workspace = 6, monitor:eDP-1, default:true
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
+workspace = 10, monitor:eDP-1
+
 # System update
 bind = Super+Shift, U, exec, foot -e ~/.local/bin/system-update
