--- a/openrazer/razer.conf
+++ b/openrazer/razer.conf
@@ -20,7 +20,7 @@ battery_notifier_freq = 600
 battery_notifier_percent = 33
 
 # Apply effects saved to disk when daemon starts
-restore_persistence = False
+restore_persistence = True
 
 # Enable this if you dual boot with Windows and the effect isn't restored. Requires restore_persistence = True
 persistence_dual_boot_quirk = False
