feat: Super+M toggles special:music workspace, bind WS 1-7 to ultrawide

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -151,7 +151,7 @@ bind = $kbTerminal, exec, app2unit -- $terminal
 bind = $kbBrowser, exec, app2unit -- $browser
 bind = Super, G, exec, app2unit -- github-desktop
 bind = $kbFileExplorer, exec, app2unit -- $fileExplorer
-bind = Super, M, exec, app2unit -- spotify
+bind = Super, M, togglespecialworkspace, music
 bind = Super, N, exec, app2unit -- notion-app
 bind = Super, B, exec, app2unit -- blueman-manager
 bind = Super+Alt, E, exec, app2unit -- nemo
