feat: add random wallpaper on startup and --random flag

--- a/caelestia/hypr-user.conf
+++ b/caelestia/hypr-user.conf
@@ -19,3 +19,6 @@ workspace = 10, monitor:eDP-1
 
 # System update
 bind = Super+Shift, U, exec, foot -e ~/.local/bin/system-update
+
+# Animated wallpaper on startup (random)
+exec-once = sleep 3 && ~/.config/scripts/set-wallpaper-engine.sh --random
