feat: reduce window gaps (out: 40→20, single: 20→10)

--- a/caelestia/hypr-vars.conf
+++ b/caelestia/hypr-vars.conf
@@ -1,3 +1,7 @@
 $cursorTheme = Bibata-Modern-Classic
 $cursorSize = 24
 $windowOpacity = 0.90
+
+# Reduced outer gaps (default: 40)
+$windowGapsOut = 20
+$singleWindowGapsOut = 10
