feat: add Super+Shift+W for live wallpaper selector, add fill scaling

--- a/caelestia/hypr-user.conf
+++ b/caelestia/hypr-user.conf
@@ -20,5 +20,8 @@ workspace = 10, monitor:eDP-1
 # System update
 bind = Super+Shift, U, exec, foot -e ~/.local/bin/system-update
 
+# Live wallpaper selector
+bind = Super+Shift, W, exec, ~/.config/scripts/set-wallpaper-engine.sh --fuzzel
+
 # Animated wallpaper on startup (random)
 exec-once = sleep 3 && ~/.config/scripts/set-wallpaper-engine.sh --random
